# vfplot

./: .distignore  .gitignore  .travis.yml  CHANGES  CHANGES.xml  CREDITS  INSTALL  INSTALL.xml  Makefile  Makefile.in  README.md  TODO  configure.in  debian-update.sh.in  setup.sh
debian/: control  copyright  docs  rules
docbook/: CHANGES.xml  CREDITS.xml  INSTALL.xml
script/: setup.sh
src/: Accept.mk  Common.mk.in  DocBook.mk  Makefile  config.h.in  quietlex.h  simple.arw  stack.c  stack.h  vfield.c  vfield.h
src/accept/: accept-setup.sh  helpers.sh
src/docbook/: refentryinfo-date.xml  refmeta-5.xml  refmeta.xml  refsect1-author.xml
src/fixtures/: circular.dom  conventional.dom  cyl-u.grd  cyl-v.grd  cyl.sh  house-001.gfs  house.dom  shear.mat
src/gfs2xyz/: .gitignore  Makefile  accept.sh  gfs2xyz.1  gfs2xyz.c  gfs2xyz.h  gfs2xyz2D.xml  main.c  options.ggo
src/include/: .gitignore
src/libkdtree/: Makefile  kdtree-fetch.sh  kdtree.c
src/libvfplot/: .gitignore  Makefile  adaptive.c  adaptive.h  alist.c  alist.h  arrow.c  arrow.h  aspect.c  aspect.h  bbox.c  bbox.h  bilinear.c  bilinear.h  constants.h  contact.c  contact.h  cubic.c  cubic.h  curvature.c  curvature.h  dim0.c  dim0.h  dim1.c  dim1.h  dim2.c  dim2.h  dom.xml  domain-test.c  domain.c  domain.h  dynamic.c  dynamic.h  ellipse-debug.c  ellipse-debug.sh  ellipse-stability.c  ellipse-stability.sh  ellipse.c  ellipse.h  error.h  (+67 more)
src/misc/: README.md  TODO
src/misc/animation/: Makefile  README.md  mkpng.sh
src/misc/mat/: README.md  shear.m
src/misc/pattern/: README.md
src/misc/pwgrid/: .gitignore  Makefile  README.md  main.c  options.ggo  pwgrid.c  pwgrid.h
src/misc/wedge/: README.md  wedge.eps
src/sag2grd/: .gitignore  Makefile  accept.sh  sag2grd.in  sag2grd.pl  sag2grd.py  sag2grd.xml  test.sag
src/testsuite/: Makefile  arrow.c  arrow.h  bbox.c  bbox.h  bilinear.c  bilinear.h  contact.c  contact.h  cubic.c  cubic.h  ellipse.c  ellipse.h  main.c  margin.c  margin.h  polynomial.c  polynomial.h  potential.c  potential.h  slj.c  slj.h  tests.c  tests.h  vector.c  vector.h
src/unit/: Makefile  assert_bbox.c  assert_bbox.h  assert_matrix.c  assert_matrix.h  assert_polyline.c  assert_polyline.h  assert_vector.c  assert_vector.h  bbox.c  bbox.h  bilinear.c  contact.c  ellipse.h  fixture.c  fixture.h  main.c  margin.c  polynomial.c  potential.h  sagread.c  sagread.h  slj.c  test_arrow.c  test_arrow.h  test_aspect.c  test_aspect.h  test_bbox.c  test_bbox.h  test_bilinear.c  test_bilinear.h  test_contact.c  test_cubic.c  test_curvature.c  test_curvature.h  test_domain.c  test_domain.h  test_ellipse.c  test_margin.c  test_margin.h  (+19 more)
src/vfplot/: .gitignore  Makefile  accept.sh  anim-sequential.pl  circular.c  circular.dom  circular.h  cylinder.c  cylinder.h  electro.c  electro.h  field.c  field.h  field_common.h  field_gfs.c  field_gfs.h  field_grd2.c  field_grd2.h  field_mat.c  field_mat.h  field_sag.c  field_sag.h  main.c  mkpng.sh  options.ggo  options.ggo.in  plot.c  plot.h  shear.m  testfields.tex  vfplot.xml
xml/: CHANGES-old.xml  CHANGES.xml  CREDITS.xml  INSTALL.xml  dom.xml  gfs2xyz2D.xml  sag.xml  sag2grd.xml  vfplot-povray.xml  vfplot.xml  vgs.xml
xml/include/: refentryinfo-date.xml  refmeta-1.xml  refmeta-5.xml  refmeta.xml  refsect1-author.xml
